--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
@@ -23,10 +24,12 @@
     "expo-clipboard": "~7.0.0",
     "expo-dev-client": "~5.0.4",
     "expo-secure-store": "~14.0.0",
+    "expo-share-intent": "^3.2.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.1",
     "moment": "^2.30.1",
+    "patch-package": "^8.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
@@ -34,7 +37,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.3.0",
     "react-native-webview": "13.12.4",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "expo-linking": "~7.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
