--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eas-cli": "^13.4.2",
     "expo": "~52.0.9",
     "expo-clipboard": "~7.0.0",
-    "expo-dev-client": "~5.0.4",
+    "expo-dev-client": "^5.0.11",
+    "expo-linking": "~7.0.4",
     "expo-secure-store": "~14.0.0",
     "expo-share-intent": "^3.2.0",
     "expo-splash-screen": "~0.29.18",
@@ -31,14 +32,13 @@
     "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.3.0",
-    "react-native-webview": "13.12.4",
-    "zustand": "^5.0.2",
-    "expo-linking": "~7.0.4"
+    "react-native-screens": "~4.4.0",
+    "react-native-webview": "13.12.5",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
