Adds build configuration for production apk for android

--- a/eas.json
+++ b/eas.json
@@ -49,6 +49,14 @@
       "ios": {
         "simulator": true
       }
+    },
+    "production:apk": {
+      "env": {
+        "APP_VARIANT": "production"
+      },
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
