--- a/.github/workflows/android-production-build-apk.yml
+++ b/.github/workflows/android-production-build-apk.yml
@@ -36,7 +36,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build Android app
         # run: eas build --platform android --local --output ${{ github.workspace }}/app-release.aab
