--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "patch-package": "^8.0.0",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-autocomplete-input": "^5.5.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-input-select": "^2.1.3",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "expo-sqlite": "~15.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
