--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "axios": "^1.7.7",
     "eas-cli": "^13.4.2",
     "expo": "~52.0.9",
+    "expo-application": "~6.0.2",
     "expo-clipboard": "~7.0.0",
     "expo-dev-client": "^5.0.11",
     "expo-linking": "~7.0.4",
     "expo-secure-store": "~14.0.0",
-    "expo-share-intent": "^3.2.0",
+    "expo-share-intent": "^3.2.2",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.18",
+    "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.1",
     "moment": "^2.30.1",
@@ -40,9 +43,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "zustand": "^5.0.2",
-    "expo-sqlite": "~15.1.2",
-    "expo-application": "~6.0.2"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
