--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "expo-haptics": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
