--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkbuddy",
-  "version": "1.2.0",
+  "version": "1.3.2",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -19,23 +19,23 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.7",
-    "eas-cli": "^13.4.2",
-    "expo": "~52.0.9",
+    "expo": "~52.0.46",
     "expo-application": "~6.0.2",
     "expo-clipboard": "~7.0.0",
-    "expo-dev-client": "^5.0.11",
+    "expo-dev-client": "~5.0.20",
+    "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
     "expo-secure-store": "~14.0.0",
     "expo-share-intent": "^3.2.2",
     "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.18",
-    "expo-sqlite": "~15.1.2",
+    "expo-splash-screen": "~0.29.24",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.0",
     "expo-web-browser": "~14.0.1",
     "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.9",
     "react-native-autocomplete-input": "^5.5.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-input-select": "^2.1.3",
@@ -43,13 +43,19 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "zustand": "^5.0.2",
-    "expo-haptics": "~14.0.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["moment", "patch-package"]
+      }
+    }
+  }
 }
