--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.7",
-    "expo": "~52.0.46",
+    "expo": "~52.0.47",
     "expo-application": "~6.0.2",
     "expo-clipboard": "~7.0.0",
+    "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
     "expo-secure-store": "~14.0.0",
-    "expo-share-intent": "^3.2.2",
+    "expo-share-intent": "^3.2.3",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-sqlite": "~15.1.4",
@@ -54,7 +55,10 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": ["moment", "patch-package"]
+        "exclude": [
+          "moment",
+          "patch-package"
+        ]
       }
     }
   }
