Updates github android build workflow to trigger on github-workflow-updates branch

--- a/.github/workflows/android-production-build-apk.yml
+++ b/.github/workflows/android-production-build-apk.yml
@@ -3,7 +3,7 @@ name: Android App Release Build APK
 on:
   push:
     branches:
-      - master
+      - enhancement/github-workflow-updates
     tags:
       - '*'
 jobs:
