Updates github workflow android build to build on push to main branch

--- a/.github/workflows/android-production-build-apk.yml
+++ b/.github/workflows/android-production-build-apk.yml
@@ -3,7 +3,7 @@ name: Android App Release Build APK
 on:
   push:
     branches:
-      - enhancement/github-workflow-updates
+      - master
     tags:
       - '*'
 jobs:
